@@ -4846,3 +4846,4 @@ Changelog for GXemul:
 		SA_RESTART flag in the timer sigaction call.
 20190417	Applying most of NetBSD's patches for the gxemul package (all
 		except two).
+20190418	Adding 512 KB ROM at 0xfff80000 in the HP 700/RX machine.
